[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hitboxes-Hurtboxes/HurtBox.gd" type="Script" id=1]

[node name="HurtBox" type="Area2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="invicniblity_ended" from="." to="." method="_on_HurtBox_invicniblity_ended"]
[connection signal="invicniblity_started" from="." to="." method="_on_HurtBox_invicniblity_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
